--- a/style.css
+++ b/style.css
@@ -4,20 +4,19 @@ h1, p {
 
 #library {
   height: auto;
-  width: 80%;
   margin: auto;
-  background-color: #f2cda2;
   padding: 20px;
 }
 
-table, th, td {
-  border: 1px solid black;
-  text-align: center; 
-  vertical-align: middle;
+table, th, td, tr {
+  border: 1px solid black !important;
+  text-align: center !important; 
+  vertical-align: middle ;
 }
 
 .row-padding {
   padding: 5px;
+  justify-content: center;
 }
 
 .form-field {
